# Progetto_2021

./: CMakeLists.txt  Print_graphs.cpp  classes_sir.cpp  classes_sir.hpp  consts.hpp  functions_mains.cpp  functions_mains.hpp  functions_random.cpp  functions_random.hpp  graphs.hpp  main.cpp  random_evolution.cpp  space_random.cpp  space_random.hpp
